# sz-sdk-python-grpc

./: .buildinfo  .flake8  .gitignore  .isort.cfg  .mypy.ini  .project  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  Makefile.darwin  Makefile.linux  Makefile.windows  Python_V3_to_V4.md  README.md  SECURITY.md  conftest.py  data.json  development-requirements.txt  documentation-requirements.txt  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  senzing_grpc.html  setup.cfg  test-requirements.txt
.claude/: CLAUDE.md
.doctrees/: environment.pickle  index.doctree  modules.doctree  senzing_grpc.doctree
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md
.github/linters/: .textlintrc.json  .yaml-lint.yml  README.md
.github/workflows/: README.md  add-to-project-garage-dependabot.yaml  add-to-project-garage.yaml  bandit.yaml  black.yaml  build-distribution.yaml  check-development-dependencies.yaml  create-sphinx-documentation.yaml  dependency-scan.yaml  flake8.yaml  isort.yaml  mypy.yaml  publish-to-pypi.yaml  pylint.yaml  pytest-darwin.yaml  pytest-darwin.yaml.disabled  pytest-linux-tls-mutual.yaml  pytest-linux-tls-server-side.yaml  pytest-linux.yaml  pytest-windows.yaml  pytest-windows.yaml.disabled  python-code-quality.yaml  unittest-examples-linux.yaml  unittest-linux.yaml
_modules/: index.html
_modules/senzing/: szconfig.html  szconfigmanager.html  szdiagnostic.html  szengine.html  szproduct.html
_modules/senzing_grpc/: szabstractfactory.html  szconfig.html  szconfigmanager.html  szdiagnostic.html  szengine.html  szproduct.html
_sources/: index.rst.txt  modules.rst.txt  senzing_grpc.rst.txt
docs/: README.md  development.md  errors.md  examples.md
docs/source/: conf.py  index.rst  modules.rst  senzing.pb2_grpc.rst  senzing.rst  senzing_grpc.rst
examples/extras/: abstract_factory_parameters.py  using_abstract_1.py  using_abstract_2.py
examples/g2config/: a_header_g2config.py  add_data_source.py  create_and_close.py  create_save_load_close.py  delete_data_source.py  g2config_constructor.py  g2config_init_and_destroy.py  list_data_sources.py  list_data_sources.txt  load.py  save.py  save.txt
examples/g2configmgr/: a_header_g2configmgr.py  add_config.py  g2configmgr_constructor.py  g2configmgr_init_and_destroy.py  get_config.py  get_config_list.py  get_default_config_id.py  replace_default_config_id.py  set_default_config_id.py
examples/g2diagnostic/: a_header_g2diagnostic.py  check_db_perf.py  g2diagnostic_constructor.py  g2diagnostic_init_and_destroy.py  g2diagnostic_init_with_config_id.py  g2diagnostic_reinit.py  get_available_memory.py  get_db_info.py  get_db_info.txt  get_logical_cores.py  get_physical_cores.py  get_total_system_memory.py
examples/g2engine/: a.py  g2engine_constructor.py
examples/g2product/: 0.py  g2product_constructor.py  g2product_init_and_destroy.py  license.py  license.txt  version.py  version.txt
examples/misc/: a_header_misc.py  add_truth_set_data.py  add_truth_set_datasources.py  add_truthset_data.py  add_truthset_datasources.py  engine_flags_by_name.py  engine_flags_by_name.txt  engine_flags_by_value.py  engine_flags_by_value.txt  engine_flags_combine_flags.txt  individual_classes.py
examples/szabstractfactory/: a_header_szabstractfactory.py  create_config.py  create_configmanager.py  create_diagnostic.py  create_engine.py  create_product.py  create_sz_config.py  create_sz_configmanager.py  create_sz_diagnostic.py  create_sz_engine.py  create_sz_product.py  destroy.py  destroy.txt  initialize_with_config_id.py  initialize_with_debug.py  reinitialize.py
examples/szconfig/: a_header_szconfig.py  add_data_source.py  add_data_source.txt  create_and_close.py  create_export_import_close.py  create_save_load_close.py  delete_data_source.py  export.py  export.txt  export_config.py  export_config.txt  get_data_source_registry.py  get_data_sources.py  get_data_sources.txt  import_config.py  list_data_sources.py  register_data_source.py  szconfig_constructor.py  szconfig_initialize_and_destroy.py  unregister_data_source.py
examples/szconfigmanager/: a_header_szconfigmanager.py  add_config.py  create_config_from_config_id.py  create_config_from_string.py  create_config_from_template.py  get_config.py  get_config.txt  get_config_list.py  get_config_list.txt  get_config_registry.py  get_config_registry.txt  get_configs.py  get_configs.txt  get_default_config_id.py  get_default_config_id.txt  register_config.py  replace_default_config_id.py  set_default_config.py  set_default_config.txt  (+3 more)
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_974c815e7b76a403_szconfig_pb2_grpc_py.html  z_974c815e7b76a403_szconfig_pb2_py.html  z_974c815e7b76a403_szconfigmanager_pb2_grpc_py.html  z_974c815e7b76a403_szconfigmanager_pb2_py.html  z_974c815e7b76a403_szdiagnostic_pb2_grpc_py.html  z_974c815e7b76a403_szdiagnostic_pb2_py.html  z_974c815e7b76a403_szengine_pb2_grpc_py.html  z_974c815e7b76a403_szengine_pb2_py.html  z_974c815e7b76a403_szhasher_pb2_grpc_py.html  z_974c815e7b76a403_szhasher_pb2_py.html  z_974c815e7b76a403_szproduct_pb2_grpc_py.html  z_974c815e7b76a403_szproduct_pb2_py.html  z_99b6d1fb576610a8___init___py.html  z_99b6d1fb576610a8_szabstractfactory_py.html  z_99b6d1fb576610a8_szconfig_py.html  z_99b6d1fb576610a8_szconfigmanager_py.html  z_99b6d1fb576610a8_szdiagnostic_py.html  z_99b6d1fb576610a8_szengine_py.html  z_99b6d1fb576610a8_szhelpers_py.html  z_99b6d1fb576610a8_szproduct_py.html
makefiles/: darwin.mk  linux.mk  osdetect.mk  windows.mk
tests/: g2config_grpc_test.py  g2config_test.py  g2configmgr_grpc_test.py  g2diagnostic_grpc_test.py  g2engine_grpc_test.py  g2product_grpc_test.py  helpers.py  szabstractfactory_test.py  szconfig_grpc_test.py  szconfig_test.py  szconfigmanager_grpc_test.py  szconfigmanager_test.py  szdiagnostic_grpc_test.py  szdiagnostic_test.py  szengine_grpc_test.py  szengine_test.py  szproduct_grpc_test.py  szproduct_test.py
(+174 files in other folders)
