[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = ["pytest", "coverage"]

[tool.bandit]
skips = ["B101"]

[tool.black]
line-length = 120

[tool.flake8]
extend-ignore = ["E203", "E501", "E704", "W503"]
max-line-length = 120

[tool.isort]
profile = "black"
skip_glob = ["src/senzing_grpc/pb2_grpc/*"]
src_paths = ["examples", "src", "tests"]

[[tool.mypy.overrides]]
module = "senzing_grpc.*"
disable_error_code = [
    "attr-defined",
    "no-untyped-call"
]
follow_imports = "skip"
strict = "true"

[[tool.mypy.overrides]]
module = "pytest_schema.*"
ignore_missing_imports = "true"

[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = "true"

[tool.pylint]
ignored-argument-names = "args|kwargs"
disable = [

]
ignore = [
    "__init__.py",
    "docs/source/conf.py"
]
notes = [
    "FIXME"
]
