[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = ["pytest", "coverage"]

[tool.bandit]
skips = ["B101"]

[tool.black]
line-length = 120

[tool.flake8]
extend-ignore = ["E203", "E501", "E704", "W503"]
max-line-length = 120

[tool.isort]
profile = "black"
skip_glob = ["src/senzing_grpc/pb2_grpc/*"]
src_paths = ["examples", "src", "tests"]

[[tool.mypy.overrides]]
module = "senzing.szengineflags.*"
ignore_missing_imports = "true"
warn_unused_ignores = "false"

[[tool.mypy.overrides]]
module = "senzing_grpc_protobuf.*"
ignore_missing_imports = "true"
warn_unused_ignores = "false"

[[tool.mypy.overrides]]
module = "senzing_grpc.*"
disable_error_code = [
    "attr-defined",
    "no-untyped-call"
]
follow_imports = "skip"
strict = "true"

[[tool.mypy.overrides]]
module = "pytest_schema.*"
ignore_missing_imports = "true"

[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = "true"

[tool.pylint]
load-plugins = [
    "pylint_per_file_ignores",
]
disable = [
    "duplicate-code",
    "line-too-long",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-public-methods"
]
ignore = [
    "__init__.py",
    "docs/source/conf.py"
]
notes = [
    "FIXME"
]
# NOTE - Ignore invalid-name only in examples for simplified code without pylint complaining variables in global scope
#        aren't uppercase.
# NOTE - Paths are regular expressions
per-file-ignores = """
    /examples/:invalid-name
"""