[metadata]
name = senzing_grpc
version = 0.2.2
author = senzing
author_email = support@senzing.com
description = Python SDK for Senzing API over gRPC
license = Apache 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senzing-garage/sz-sdk-python-grpc
project_urls =
    Bug Tracker = https://github.com/senzing-garage/sz-sdk-python-grpc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    grpcio
    protobuf
    senzing-abstract >= 0.1.4

[options.packages.find]
where = src
